# uuv_simulator

anahita_description/: CMakeLists.txt  package.xml
anahita_description/launch/: message_to_tf.launch  upload_anahita.launch  upload_anahita_default.launch  upload_anahita_default_noisy_pose.launch
anahita_description/robots/: anahita_default.xacro  anahita_default_noisy_pose.xacro  anahita_sonar.xacro
anahita_description/urdf/: anahita_actuators.xacro  anahita_base.xacro  anahita_gazebo.xacro  anahita_sensors.xacro
uuv_control/uuv_control_cascaded_pids/cfg/: AccelerationControl.cfg
uuv_control/uuv_control_cascaded_pids/launch/: joy_accel.launch  joy_velocity.launch  position_hold.launch
uuv_control/uuv_control_msgs/: CMakeLists.txt
uuv_control/uuv_trajectory_control/: CMakeLists.txt
uuv_descriptions/launch/: upload_rexrov_default.launch
uuv_descriptions/urdf/: rexrov.gazebo.xacro  rexrov_actuators.xacro  rexrov_base.xacro  rexrov_sensors.xacro
uuv_gazebo/rviz/: anahita_default.rviz  anahita_sonar.rviz  controller_demo.rviz  rexrov.perspective  rexrov_default.rviz
uuv_gazebo_worlds/launch/: qual_robosub_world.launch  robosub.launch  robosub_arena_final.launch  robosub_arena_semi.launch  robosub_world.launch  startgate_world.launch
uuv_gazebo_worlds/worlds/: empty_underwater.world  niot_arena.world  qual_robosub_arena.world  robosub.world  robosub_arena_final.world  robosub_arena_semi.world  transdec.world
uuv_teleop/: CMakeLists.txt
uuv_teleop/launch/: uuv_teleop.launch
uuv_teleop/scripts/: vehicle_teleop.py
(+45 files in other folders)
