<?xml version="1.0"?>
<package format="2">
  <name>anahita_description</name>
  <version>0.6.3</version>
  <description>The anahita_description package</description>

  <maintainer email="akashsingh049811@gmail.com">Akash Kumar Singh</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>message_to_tf</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
